# rudkin

./: README.md
Bashscripts/: clear.sh  filecreate.sh
Cppd1/include/: addnum.h
Cppd1/src/: main  main.cpp
Cppd2/: CMakeLists.txt
Cppd2/src/: circles.cpp
OpenCV/: GPUnose.py  GPUnosebl.py  circles.py  handtrac.py  requirements.txt
arduino/blink/: blink.ino
